Added freminet and fixed bootstrap upgrade issues

--- a/docs/assets/sass/common.scss
+++ b/docs/assets/sass/common.scss
@@ -167,3 +167,12 @@ app-loader {
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
 }
+
+.list-group-item {
+    border: none;
+}
+
+.table {
+    --bs-table-color: none;
+    --bs-table-bg: none;
+}
