--- a/src/app/_shared/navbar/navbar.component.html
+++ b/src/app/_shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
         <div class="logo-row">
-            <a href="https://genshin.mihoyo.com">
+            <a href="https://genshin.hoyoverse.com">
                 <img [src]="logoPath" alt="Genshin Impact" class="genshin-logo"
                     title="Go to official Genshin Impact website">
             </a>
